implement external database synchronization event listener and REST client

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.esprit</groupId>
-    <artifactId>keycloak-sync-spi</artifactId>
+    <artifactId>sab-external-db-sync</artifactId>
     <version>1.0</version>
 
     <properties>
